--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 <header>
     <img id="banner" src="banner.jpg">
 </header>
+    <nav>
+       <il>
+        <li8><a href="">home</a></li8>
+        <li8><a href="">produtos</a></li8>
+        <li8><a href="">contato</a></li8>
+    </il>
+</nav>
 
 
 <body> <!--corpo do site - tudo que aparece na tela deve estar aqui dentro-->
