--- a/contato.html
+++ b/contato.html
@@ -9,6 +9,6 @@
 
 <nav>
     <il>
-     <li8><a href="">home</a></li8>
-     <li8><a href="">produtos</a></li8>
-     <li8><a href="">contato</a></li8>
+     <li><a href="">home</a></li>
+     <li><a href="">produtos</a></li>
+     <li><a href="">contato</a></li>
