--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </header>
     <nav>
        <il>
-        <li8><a href="index.html">home</a></li8>
-        <li8><a href="">produtos</a></li8>
-        <li8><a href="contato.html">contato</a></li8>
+        <li><a href="index.html">home</a></li>
+        <li><a href="">produtos</a></li>
+        <li><a href="contato.html">contato</a></li>
     </il>
 </nav>
 
