--- a/contato.html
+++ b/contato.html
@@ -3,10 +3,57 @@
  <html lang="pt-br"> <!--informa a linguagem original do site-->
  <meta charset="UTF8"> <!--dicionario de linguagem-->
  <title>Barberia Alura</title> <!--nome na aba do navegador-->
-<link rel="stylesheet" href="style.css"> <!--link para folha de estilo css-->
+<link rel="stylesheet" href="contato.scss"> <!--link para folha de estilo css-->
 
 </head> <!--fim da cabeça do site-->
+</header>
+</body>
+<footer class="footer">
 
+	<div class="left">
+
+		<h4 class="title-footer">Loop <span>Nerd</span></h4>
+
+		<p class="links">
+			
+			<a href="#" title="Home">Home</a>
+			<a href="#" title="Html">Códigos Html</a>
+			<a href="#" title="Css">Códigos Css</a>
+			<a href="#" title="jQuery">Templates Html Css</a>
+
+		</p>
+
+		<div class="footer-icons">
+
+			<a href="#"><i class="fa fa-facebook"></i></a>
+			<a href="#"><i class="fa fa-instagram"></i></a>
+			<a href="#"><i class="fa fa-pinterest"></i></a>
+			<a href="#"><i class="fa fa-twitter"></i></a>
+
+		</div>
+
+                <p class="Copyright">Copyright &copy; 2022 Seu site - Todos os Direitos Reservados.</p>
+
+
+	</div><!--Left-->
+
+	<div class="right">
+
+		<h4 class="title-footer">Contato</h4>
+
+		<form action="#" method="post">
+
+			<input type="text" name="nome" placeholder="Nome" required=""/>
+			<input type="email" name="email" placeholder="E-mail" required=""/>
+			<input type="text" name="assunto" placeholder="assunto" required=""/>
+			<textarea name="messagem" placeholder="Messagem" required=""></textarea>
+			<button class="btn">Enviar</button>
+
+		</form>
+
+	</div><!--Right-->
+
+</footer>
 <nav>
     <il>
      <li><a href="">home</a></li>
