--- a/contato.html
+++ b/contato.html
@@ -3,7 +3,7 @@
  <html lang="pt-br"> <!--informa a linguagem original do site-->
  <meta charset="UTF8"> <!--dicionario de linguagem-->
  <title>Barberia Alura</title> <!--nome na aba do navegador-->
-<link rel="stylesheet" href="contato.scss"> <!--link para folha de estilo css-->
+<link rel="stylesheet" href="contato.css"> <!--link para folha de estilo css-->
 
 </head> <!--fim da cabeça do site-->
 </header>
